fixed adding photos functionality

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -62,7 +62,7 @@
     </div>
   </header>
 
-  <main class="p-6">
+  <main>
     <div class="min-h-screen place-content-center">
       {% block body %}
       {% endblock body %}
