--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -4,6 +4,15 @@
 {% block title %}Welcome{% endblock %}
 
 {% block body %}
-  <h1>The front page</h1>
+<div class="hero min-h-screen" style="background-image: url(../../../media/images/laura-fuhrman-73OJLcahQHg-unsplash.jpg);">
+  <div class="hero-overlay bg-opacity-60"></div>
+  <div class="hero-content text-center text-neutral-content">
+    <div class="max-w-md">
+      <h1 class="mb-5 text-5xl font-bold">Precious moments</h1>
+      <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+      <button class="btn btn-accent">Get Started</button>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
