--- a/photos/templates/photos/album_detail.html
+++ b/photos/templates/photos/album_detail.html
@@ -6,12 +6,19 @@
 
 <div class="bg-base-100">
   <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
-    <div class="">
+    <div class="flex justify-between">
       <h2 class="sr-only">Album Detail</h2>
       <h1 class="text-3xl font-bold tracking-tight">{{album.title|capfirst}}</h1>
+      <div class="flex items-center tooltip tooltip-left" data-tip="Edit the Title and Description">
+        <a href="{% url 'photos:album_edit' album.pk %}">
+          <svg viewBox="0 0 24 24" class="stroke-current opacity-50 hover:opacity-100 stroke-2 h-10 w-10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 7C3 4.79086 4.79086 3 7 3H17C19.2091 3 21 4.79086 21 7V17C21 19.2091 19.2091 21 17 21H7C4.79086 21 3 19.2091 3 17V7Z"></path> <path d="M16.2739 11.1377C16.6644 10.7472 16.6644 10.114 16.2739 9.7235L14.4823 7.9319C14.0918 7.54137 13.4586 7.54138 13.0681 7.9319L8.96106 12.0389L8.34768 15.7477C8.3365 15.8154 8.39516 15.874 8.4628 15.8627L12.1669 15.2448L16.2739 11.1377Z"></path></svg>
+        </a>
+      </div>
     </div>
 
-    <p></p>
+    <div class="my-6">
+      <h2 class="text-xl font-semibold">{{album.description}}</h2>
+    </div>
 
     <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
 
@@ -32,12 +39,23 @@
     </div>
   </div>
 
+  {% if messages %}
+    {% for message in messages %}
+    <div class="my-6 alert alert-success mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+      <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+      <span>{{message}}</span>
+    </div>
+    {% endfor %}
+  {% endif %}
+
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
-    <div class="block mb-6">
-      <a href="{% url 'photos:add_photos_to_album' album.pk %}" class="btn btn-outline btn-accent">Add more photos</a>
+    <div class="flex mb-6">
+      <a href="{% url 'photos:add_photos_to_album' album.pk %}" class="btn btn-outline btn-accent">
+        <svg viewBox="0 0 24 24" class="stroke-current stroke-2 h-5 w-5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13 4H8.8C7.11984 4 6.27976 4 5.63803 4.32698C5.07354 4.6146 4.6146 5.07354 4.32698 5.63803C4 6.27976 4 7.11984 4 8.8V15.2C4 16.8802 4 17.7202 4.32698 18.362C4.6146 18.9265 5.07354 19.3854 5.63803 19.673C6.27976 20 7.11984 20 8.8 20H15.2C16.8802 20 17.7202 20 18.362 19.673C18.9265 19.3854 19.3854 18.9265 19.673 18.362C20 17.7202 20 16.8802 20 15.2V11" ></path> <path d="M4 16L8.29289 11.7071C8.68342 11.3166 9.31658 11.3166 9.70711 11.7071L13 15M13 15L15.7929 12.2071C16.1834 11.8166 16.8166 11.8166 17.2071 12.2071L20 15M13 15L15.25 17.25" ></path> <path d="M18.5 3V5.5M18.5 8V5.5M18.5 5.5H16M18.5 5.5H21" ></path> </svg>
+         Add more photos
+      </a>
     </div>
     <div class="flex gap-4 items-end">
-      <a href="{% url 'photos:album_edit' album.pk %}" class="btn btn-neutral">Edit album</a>
       <a href="{% url 'photos:album_delete' album.pk %}" class="btn btn-outline btn-error">Delete album</a>
     </div>
   </div>
