delete photo feature + swipe

--- a/photos/templates/photos/album_form.html
+++ b/photos/templates/photos/album_form.html
@@ -18,6 +18,8 @@
         {% endif %}
       </div>
     </form>
+
+    <a href="{% url 'photos:albums_view' %}" class="m-6 btn btn-default">Back</a>
   </div>
 
 {% endblock body %}
