--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -76,4 +76,6 @@
   <!-- Alpine js scripts -->
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
+  <script src="{% static 'js/script.js' %}"></script>
+
 </html>
