--- a/photos/templates/photos/album_detail.html
+++ b/photos/templates/photos/album_detail.html
@@ -20,22 +20,64 @@
       <h2 class="text-xl font-semibold">{{album.description}}</h2>
     </div>
 
-    <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
+    <!-- View / Swipe buttons -->
+    {% if photos %}
+    <div class="flex place-content-center">
+      <div class="inline-flex rounded-lg border border-gray-100 bg-gray-100 p-1">
+        <button id="view-button" class="inline-flex items-center gap-2 rounded-md bg-white px-4 py-2 text-sm text-blue-500 shadow-sm focus:relative">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-5 w-5">
+            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g transform="translate(-259.000000, -680.000000)" class="fill-current"><g id="icons" transform="translate(56.000000, 160.000000)">
+              <path d="M209.3,538 L206.15,538 C205.5704,538 205.1,537.552 205.1,537 C205.1,536.448 205.5704,536 206.15,536 L209.3,536 C209.8796,536 210.35,536.448 210.35,537 C210.35,537.552 209.8796,538 209.3,538 L209.3,538 Z M210.35,534 L205.1,534 C203.93975,534 203,534.895 203,536 L203,538 C203,539.105 203.93975,540 205.1,540 L210.35,540 C211.51025,540 212.45,539.105 212.45,538 L212.45,536 C212.45,534.895 211.51025,534 210.35,534 L210.35,534 Z M220.85,524 L217.7,524 C217.1204,524 216.65,523.552 216.65,523 C216.65,522.448 217.1204,522 217.7,522 L220.85,522 C221.4296,522 221.9,522.448 221.9,523 C221.9,523.552 221.4296,524 220.85,524 L220.85,524 Z M221.9,520 L216.65,520 C215.48975,520 214.55,520.895 214.55,522 L214.55,524 C214.55,525.105 215.48975,526 216.65,526 L221.9,526 C223.06025,526 224,525.105 224,524 L224,522 C224,520.895 223.06025,520 221.9,520 L221.9,520 Z M221.9,537 C221.9,537.552 221.4296,538 220.85,538 L217.7,538 C217.1204,538 216.65,537.552 216.65,537 L216.65,531 C216.65,530.448 217.1204,530 217.7,530 L220.85,530 C221.4296,530 221.9,530.448 221.9,531 L221.9,537 Z M221.9,528 L216.65,528 C215.48975,528 214.55,528.895 214.55,530 L214.55,538 C214.55,539.105 215.48975,540 216.65,540 L221.9,540 C223.06025,540 224,539.105 224,538 L224,530 C224,528.895 223.06025,528 221.9,528 L221.9,528 Z M210.35,529 C210.35,529.552 209.8796,530 209.3,530 L206.15,530 C205.5704,530 205.1,529.552 205.1,529 L205.1,523 C205.1,522.448 205.5704,522 206.15,522 L209.3,522 C209.8796,522 210.35,522.448 210.35,523 L210.35,529 Z M210.35,520 L205.1,520 C203.93975,520 203,520.895 203,522 L203,530 C203,531.105 203.93975,532 205.1,532 L210.35,532 C211.51025,532 212.45,531.105 212.45,530 L212.45,522 C212.45,520.895 211.51025,520 210.35,520 L210.35,520 Z"> </path></g></g></g>
+          </svg>
+          Gallery
+        </button>
 
-      {% if photos %}
-        {% for photo in photos %}
-          <a class="group">
-            <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-              <img src="{{photo.image.url}}" alt="{{ photo.pk }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
+        <button id="swipe-button" class="inline-flex items-center gap-2 rounded-md px-4 py-2 text-sm text-gray-500 hover:text-gray-700 focus:relative">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
+            <path d="M21.707,11.293a1,1,0,0,1,0,1.414l-4,4a1,1,0,0,1-1.414-1.414L19.586,12,16.293,8.707a1,1,0,1,1,1.414-1.414ZM7,17a1,1,0,0,0,.707-1.707L4.414,12,7.707,8.707A1,1,0,1,0,6.293,7.293l-4,4a1,1,0,0,0,0,1.414l4,4A1,1,0,0,0,7,17Z"></path></g>
+          </svg>
+          Swipe
+        </button>
+      </div>
+    </div>
+    {% endif %}
+
+    <div>
+      <!-- All photos layout -->
+      <div id="photo-gallery-layout" class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
+
+        {% if photos %}
+          {% for photo in photos %}
+            <a class="group" href="{% url 'photos:photo_detail' photo.pk %}">
+              <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
+                <img src="{{photo.image.url}}" alt="{{ photo.pk }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+            </a>
+          {% endfor %}
+        {% else %}
+            <div class="prose prose-sm md:prose-base">
+              <h1>Your photo album is empty..!</h1>
             </div>
-          </a>
-        {% endfor %}
-      {% else %}
-          <div class="prose prose-sm md:prose-base">
-            <h1>Your photo album is empty..!</h1>
-          </div>
-      {% endif %}
+        {% endif %}
 
+      </div>
+
+      <!-- Swipe container -->
+      {% if photos %}
+      <div id="photo-swipe-layout" class="hidden p-8">
+        <div class="h-full relative">
+          <swiper-container class="mySwiper w-full h-full" pagination="true" pagination-clickable="true" navigation="true">
+            {% for photo in photos %}
+              <swiper-slide class="flex justify-center align-middle">
+                <a class="hover:opacity-75" href="{% url 'photos:photo_detail' photo.pk %}"><img src="{{photo.image.url}}" alt="{{ photo.pk }}" class="block w-full h-full rounded-xl"></a>
+              </swiper-slide>
+            {% endfor %}
+          </swiper-container>
+        </div>
+      </div>
+
+      <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
+      {% endif %}
     </div>
   </div>
 
@@ -56,9 +98,15 @@
       </a>
     </div>
     <div class="flex gap-4 items-end">
-      <a href="{% url 'photos:album_delete' album.pk %}" class="btn btn-outline btn-error">Delete album</a>
+      <a href="{% url 'photos:album_delete' album.pk %}" class="btn btn-outline btn-error">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"/>
+      </svg>
+        Delete album</a>
     </div>
   </div>
+
+
 
 
 </div>
