feature friendship/relation management done

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -17,12 +17,16 @@
       </div>
       <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
-          <li><a href="{% url 'photos:albums_view' %}">My Albums</a></li>
+          <li><a href="{% url 'albums:albums_view' %}">My Albums</a></li>
         </ul>
         <div class="dropdown dropdown-end">
           <label tabindex="0" class="btn btn-ghost btn-circle avatar">
             <div class="w-10 rounded-full">
-              <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" />
+              {% if user.profile_picture %}
+                <img src="{{user.profile_picture.url}}" alt="user profile pic">
+              {% else %}
+                <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" />
+              {% endif %}
             </div>
           </label>
           <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
@@ -32,7 +36,7 @@
                 <span class="badge">New</span>
               </a>
             </li>
-            <li><a href="{% url 'photos:albums_view' %}">Albums</a></li>
+            <li><a href="{% url 'albums:albums_view' %}">Albums</a></li>
             <li>
             </li>
             <li><a>Settings</a></li>
