--- a/photos/templates/photos/photo_detail.html
+++ b/photos/templates/photos/photo_detail.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="mt-10 flex gap-4 items-end">
-    <a href="{% url 'photos:album_detail' photo.album.pk %}" class="flex place-content-center btn btn-neutral">
+    <a href="{% url 'albums:album_detail' photo.album.pk %}" class="flex place-content-center btn btn-neutral">
       <svg class="w-6 h-6 stroke-2 fill-current" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
         <path d="M224 480h640a32 32 0 1 1 0 64H224a32 32 0 0 1 0-64z"></path>
         <path d="m237.248 512 265.408 265.344a32 32 0 0 1-45.312 45.312l-288-288a32 32 0 0 1 0-45.312l288-288a32 32 0 1 1 45.312 45.312L237.248 512z"></path>
