--- a/albums/templates/albums/albums.html
+++ b/albums/templates/albums/albums.html
@@ -14,7 +14,7 @@
     <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
 
       {% for album, default_photo in albums_with_default_photos.items %}
-        <a href="{% url 'photos:album_detail' album.pk %}" class="group">
+        <a href="{% url 'albums:album_detail' album.pk %}" class="group">
           <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
             {% if default_photo %}
               <img src="{{ default_photo.image.url }}" alt="{{ album.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
@@ -28,15 +28,22 @@
           <p class="mt-1 text-lg font-medium">{{ album.title }}</p>
         </a>
       {% endfor %}
+      <a href="{% url 'albums:album_create' %}" class="tooltip tooltip-top tooltip-primary group" data-tip="create new album">
+        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
+          <div class="grid place-content-center h-full w-full object-cover object-center group-hover:opacity-75">
+            <p class="text-8xl font-base text-slate-600">+</p>
+          </div>
+        </div>
+      </a>
 
     </div>
   </div>
 
-  <div class="mx-auto max-w-2xl px-4  sm:px-6 lg:max-w-7xl lg:px-8">
+  <!-- <div class="mx-auto max-w-2xl px-4  sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="flex items-end">
-      <a href="{% url 'photos:album_create' %}" class="btn btn-primary">Create new album</a>
+      <a href="{% url 'albums:album_create' %}" class="btn btn-primary">Create new album</a>
     </div>
-  </div>
+  </div> -->
 
 </div>
 
