--- a/photos/templates/photos/add_photos_to_album.html
+++ b/photos/templates/photos/add_photos_to_album.html
@@ -31,7 +31,7 @@
 
     <div class="block mt-10 space-x-4">
       <button class="btn btn-primary" type="submit">Add Photos</button>
-      <a href="{% url 'photos:albums_view' %}" class="btn btn-neutral">Back</a>
+      <a href="{% url 'albums:albums_view' %}" class="btn btn-neutral">Back</a>
     </div>
   </form>
 
