--- a/albums/templates/albums/albums.html
+++ b/albums/templates/albums/albums.html
@@ -6,7 +6,7 @@
 
 
 <div class="bg-base-100">
-  <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+  <div class="mx-auto max-w-2xl px-4 pt-16 pb-10 sm:px-6 sm:pt-24 sm:pb-16 lg:max-w-7xl lg:px-8">
     <h2 class="sr-only">My albums</h2>
     <h2 class="text-3xl font-bold tracking-tight">Explore your albums</h2>
 
@@ -31,11 +31,36 @@
       <a href="{% url 'albums:album_create' %}" class="tooltip tooltip-top tooltip-primary group" data-tip="create new album">
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
           <div class="grid place-content-center h-full w-full object-cover object-center group-hover:opacity-75">
-            <p class="text-8xl font-base text-slate-600">+</p>
+            <p class="text-8xl font-base text-slate-600"> + </p>
           </div>
         </div>
       </a>
+    </div>
+  </div>
 
+  <div class="mx-auto max-w-2xl px-4 pb-16 sm:px-6 sm:pb-24 lg:max-w-7xl lg:px-8">
+    <div class="py-2 flex gap-4 items-center">
+      <h2 class="text-3xl font-bold tracking-tight">Shared albums</h2>
+      <svg class="w-6 h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52" enable-background="new 0 0 52 52" xml:space="preserve" transform="rotate(-45)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M17.3,36.1l-1.1-1.4c0,0-0.7-1-0.9-1.6c-0.2-0.3-0.5-0.5-0.9-0.5h-0.6c-3.5,0-6.5-2.6-6.7-6 c-0.3-3.8,2.8-6.9,6.5-6.9h9.1c1.2,0,2.3,0.4,3.2,0.8c1.2,0.7,2.2,1.8,2.7,3.1c0.3,0.8,0.5,1.6,0.5,2.6c0,0.5-0.1,0.9-0.2,1.4 c-0.2,0.7,0.3,1.3,1,1.2l3.4,0c0.5,0,0.8-0.4,1-0.8c0.1-0.6,0.1-1.2,0.1-1.8c0-0.8-0.1-1.7-0.3-2.6c-0.3-1.4-0.9-2.7-1.7-3.9 c-1.5-2.2-3.8-4-6.4-4.7c-1-0.3-2.2-0.5-3.2-0.5H14c-6.3,0-11.7,4.9-11.9,11.2c-0.3,6.6,5,12.1,11.6,12.1h3 C17.4,37.7,17.8,36.7,17.3,36.1z M49.9,25.6c-0.2-6.3-5.6-11.3-11.9-11.2l-2.7-0.1c-0.8,0-1.3,1-0.8,1.6c0.8,0.9,1.4,1.9,2,3 c0.2,0.3,0.5,0.5,0.9,0.5H38c3.5,0,6.5,2.6,6.7,6c0.3,3.8-2.8,6.9-6.5,6.9l-9.1,0c-1.2,0-2.3-0.4-3.2-0.8c-1.2-0.7-2.2-1.8-2.7-3.1 c-0.3-0.8-0.5-1.6-0.5-2.6c0-0.5,0.1-0.9,0.2-1.4c0.2-0.7-0.3-1.3-1-1.2h-3.4c-0.5,0-0.8,0.4-1,0.8c-0.1,0.6-0.1,1.2-0.1,1.8 c0,0.8,0.1,1.8,0.3,2.6c0.3,1.4,0.9,2.7,1.7,3.8c1.5,2.2,3.8,4,6.4,4.7c1,0.3,2.2,0.5,3.2,0.5l9.1,0C44.8,37.7,50.1,32.2,49.9,25.6 z"></path> </g> </g></svg>
+    </div>
+    <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
+
+
+      {% for album, default_photo in shared_albums_with_default_photos.items %}
+      <a href="{% url 'albums:album_detail' album.pk %}" class="group">
+        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
+          {% if default_photo %}
+            <img src="{{ default_photo.image.url }}" alt="{{ album.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
+          {% else %}
+            <div class="grid place-content-center h-full w-full object-cover object-center group-hover:opacity-75">
+              <p class="text-lg font-semibold tracking-wide">Empty album</p>
+            </div>
+          {% endif %}
+        </div>
+        <h3 class="mt-4 text-sm">{{ album.photo_count }} photos | uploaded by {{ album.creator.first_name }} </h3>
+        <p class="mt-1 text-lg font-medium">{{ album.title }}</p>
+      </a>
+      {% endfor %}
     </div>
   </div>
 
