fixed some logic

--- a/access/templates/access/album_access.html
+++ b/access/templates/access/album_access.html
@@ -113,6 +113,9 @@
       </form>
     </section>
 
+    <div>
+      <a href="{% url 'albums:album_detail' album.pk %}" class="btn btn-default">Back</a>
+    </div>
   </div>
 </div>
 
