--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -132,25 +132,27 @@
             </tr>
           </thead>
           {% for user in searched_users %}
-          <tbody>
-            <tr class="hover">
-              <th>
-                <a href="{% url 'accounts:account_view' user.id %}" class="cursor-pointer">
-                  <div class="flex items-center space-x-3">
-                    <div class="avatar">
-                      <div class="mask mask-squircle w-12 h-12">
-                        <img src="{% if user.profile_picture %}{{user.profile_picture.url}}{% else %} {% endif %}" alt="Avatar Tailwind CSS Component" />
+            {% if user not in relations_users %}
+            <tbody>
+              <tr class="hover">
+                <th>
+                  <a href="{% url 'accounts:account_view' user.id %}" class="cursor-pointer">
+                    <div class="flex items-center space-x-3">
+                      <div class="avatar">
+                        <div class="mask mask-squircle w-12 h-12">
+                          <img src="{% if user.profile_picture %}{{user.profile_picture.url}}{% else %} {% endif %}" alt="Avatar Tailwind CSS Component" />
+                        </div>
+                      </div>
+                      <div>
+                        <div class="font-bold">{% if user.first_name or user.last_name %}{{user.first_name}} {{user.last_name}}{% else %}-{% endif %}</div>
+                        <div class="text-sm opacity-50">{{user.email}}</div>
                       </div>
                     </div>
-                    <div>
-                      <div class="font-bold">{% if user.first_name or user.last_name %}{{user.first_name}} {{user.last_name}}{% else %}-{% endif %}</div>
-                      <div class="text-sm opacity-50">{{user.email}}</div>
-                    </div>
-                  </div>
-                </a>
-              </th>
-            </tr>
-          </tbody>
+                  </a>
+                </th>
+              </tr>
+            </tbody>
+            {% endif %}
           {% endfor %}
         </table>
       </div>
