--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -1,6 +1,8 @@
 {% extends 'core/base.html' %}
 {% load static %}
 
+{% load thumbnail %}
+
 {% block title %}Account{% endblock %}
 
 {% block body %}
@@ -89,7 +91,16 @@
                   <div class="flex items-center space-x-3">
                     <div class="avatar">
                       <div class="mask mask-squircle w-10 h-10">
-                        <img src="{% if user != relation.user_sending %}{{relation.user_sending.profile_picture.url}}{% elif user != relation.user_receiving %}{{relation.user_receiving.profile_picture.url}} {% endif %}" alt="Avatar Tailwind CSS Component" />
+                        <!-- <img src="{% if user != relation.user_sending %}{{relation.user_sending.profile_picture.url}}{% elif user != relation.user_receiving %}{{relation.user_receiving.profile_picture.url}} {% endif %}" alt="Avatar Tailwind CSS Component" /> -->
+                        {% if user != relation.user_sending %}
+                          {% thumbnail relation.user_sending.profile_picture "50x50" crop="center" as im %}
+                            <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation.user_sending.first_name relation.user_sending.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                          {% endthumbnail %}
+                        {% elif user != relation.user_receiving %}
+                          {% thumbnail relation.user_receiving.profile_picture "50x50" crop="center" as im %}
+                          <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation.user_receiving.first_name relation.user_receiving.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                          {% endthumbnail %}
+                        {% endif %}
                       </div>
                     </div>
                     <div>
