--- a/albums/templates/albums/album_detail.html
+++ b/albums/templates/albums/album_detail.html
@@ -2,6 +2,8 @@
 
 {% block title %}Albums{% endblock title %}
 
+{% load thumbnail %}
+
 {% block body %}
 
 <div class="bg-base-100">
@@ -50,18 +52,14 @@
           {% for photo in photos %}
             <a class="group" href="{% url 'photos:photo_detail' photo.pk %}">
               <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-                <img src="{{photo.image.url}}" alt="{{ photo.pk }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                <!-- <img src="{{photo.image.url}}" alt="{{ photo.pk }}" class="h-full w-full object-cover object-center group-hover:opacity-75"> -->
+                {% thumbnail photo.image "300x300" crop="center" as im %}
+                  <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ im.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                {% endthumbnail %}
               </div>
             </a>
           {% endfor %}
-            <a href="{% url 'photos:add_photos_to_album' album.pk %}" class="tooltip tooltip-top tooltip-primary group" data-tip="add photos">
-              <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-                <div class="grid place-content-center h-full w-full object-cover object-center group-hover:opacity-75">
-                  <p class="text-8xl font-base text-slate-600">+</p>
-                </div>
-              </div>
-            </a>
-        {% else %}
+        {% endif %}
           <a href="{% url 'photos:add_photos_to_album' album.pk %}" class="tooltip tooltip-top tooltip-primary group" data-tip="add photos">
             <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
               <div class="grid place-content-center h-full w-full object-cover object-center group-hover:opacity-75">
@@ -69,7 +67,6 @@
               </div>
             </div>
           </a>
-        {% endif %}
 
       </div>
 
@@ -94,18 +91,21 @@
       <!-- Who has access -->
     {% if user == album.creator %}
     <div class="flex place-content-end">
-      <a href="{% url 'access:album-access' album.pk %}" class="hover:btn-ghost hover:rounded-xl px-6 hover:px-6 pb-4 hover:pb-4">
+      <a href="{% url 'access:album-access' album.pk %}" class="btn-ghost hover:btn-ghost rounded-lg px-6 hover:px-6 pb-6 hover:pb-6">
         <div class="mt-6">
           <div class="flex items-center space-x-2 text-base">
-            <h4 class="font-semibold">Shared with: </h4>
-            <div class="badge badge-outline badge-accent">{{users_with_access_count}}</div>
+            <h4 class="font-semibold mb-2">Shared with: </h4>
+            <div class="badge badge-outline badge-accent mb-2">{{users_with_access_count}}</div>
           </div>
           <div class="tooltip tooltip-bottom" data-tip="{% for user in users_with_access %}{% firstof user.first_name user %}{% if forloop.last %}{% else %}, {% endif %}{% endfor %}">
             <div class="avatar-group -space-x-6">
               {% for user in users_with_access %}
                 <div class="avatar">
                   <div class="w-12">
-                    <img src="{{user.profile_picture.url}}" alt="{% firstof user.first_name user.email %}'s profile pic">
+                    <!-- <img src="{{user.profile_picture.url}}" alt="{% firstof user.first_name user.email %}'s profile pic"> -->
+                    {% thumbnail user.profile_picture "50x50" crop="center" as im %}
+                      <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof user.first_name user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                    {% endthumbnail %}
                   </div>
                 </div>
               {% endfor %}
