--- a/albums/templates/albums/albums.html
+++ b/albums/templates/albums/albums.html
@@ -2,6 +2,7 @@
 
 {% block title %}Albums{% endblock title %}
 
+{% load thumbnail %}
 {% load custom_filters %}
 
 {% block body %}
@@ -24,7 +25,10 @@
         <a href="{% url 'albums:album_detail' album.pk %}" class="group">
           <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
             {% if default_photo %}
-              <img src="{{ default_photo.image.url }}" alt="{{ album.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
+              <!-- <img src="{{ default_photo.image.url }}" alt="{{ album.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75"> -->
+              {% thumbnail default_photo.image "300x300" crop="center" as im %}
+                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ im.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
+              {% endthumbnail %}
             {% else %}
               <div class="grid place-content-center h-full w-full object-cover object-center group-hover:opacity-75">
                 <p class="text-lg font-semibold tracking-wide">Empty album</p>
@@ -72,7 +76,10 @@
       <a href="{% url 'albums:album_detail' album.pk %}" class="group">
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
           {% if default_photo %}
-            <img src="{{ default_photo.image.url }}" alt="{{ album.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
+            <!-- <img src="{{ default_photo.image.url }}" alt="{{ album.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75"> -->
+            {% thumbnail default_photo.image "300x300" crop="center" as im %}
+              <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ im.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
+            {% endthumbnail %}
           {% else %}
             <div class="grid place-content-center h-full w-full object-cover object-center group-hover:opacity-75">
               <p class="text-lg font-semibold tracking-wide">Empty album</p>
