--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load thumbnail %}
 <!DOCTYPE html >
 <html lang="en" >
 <head>
@@ -23,7 +24,10 @@
           <label tabindex="0" class="btn btn-ghost btn-circle avatar">
             <div class="w-10 rounded-full">
               {% if user.profile_picture %}
-                <img src="{{user.profile_picture.url}}" alt="user profile pic">
+                <!-- <img src="{{user.profile_picture.url}}" alt="user profile pic"> -->
+                {% thumbnail user.profile_picture "50x50" crop="center" as im %}
+                  <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ im.user }} profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                {% endthumbnail %}
               {% else %}
                 <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" />
               {% endif %}
