--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -7,12 +7,12 @@
 
 {% block body %}
 <div class="bg-base-100">
-  <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+  <div class="mx-auto max-w-2xl px-6 py-16 sm:py-24 lg:max-w-7xl lg:px-8">
     <div class="prose">
       <h1 class="sr-only">Profile page</h1>
       <h1>
         {% if account == user %}Your profile
-        {% else %} {% if account.first_name %}{{account.first_name|title}}{% else %}{{account.email}}{% endif %}'s profile
+        {% else %} {% firstof account.first_name|title account.email %}'s profile
         {% endif %}
       </h1>
     </div>
@@ -155,7 +155,7 @@
                         </div>
                       </div>
                       <div>
-                        <div class="font-bold">{% if user.first_name or user.last_name %}{{user.first_name}} {{user.last_name}}{% else %}-{% endif %}</div>
+                        <div class="font-bold">{% firstof user.first_name user.last_name "-" %}</div>
                         <div class="text-sm opacity-50">{{user.email}}</div>
                       </div>
                     </div>
