--- a/accounts/templates/accounts/account_update.html
+++ b/accounts/templates/accounts/account_update.html
@@ -1,24 +1,157 @@
 {% extends 'core/base.html' %}
 {% load static %}
+{% load thumbnail %}
 
 {% block title %}Edit account{% endblock %}
 
 {% block body %}
-  <h1>Account editing</h1>
 
-  <div class="hidden textarea textarea-bordered"></div>
+<section class="bg-base-100">
+  <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
+    <div class="grid grid-cols-1 gap-x-16 gap-y-8 lg:grid-cols-5">
+      <div class="lg:col-span-2 lg:py-12">
+        <div class="flex flex-wrap px-6 gap-10">
+          <div class="">
+            {% thumbnail user.profile_picture "200x200" crop="center" as im %}
+            <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ im.user }} profile pic" class="h-48 w-48 rounded-full ring-offset-base-100 ring-offset-2 ring-4 ring-primary">
+            {% endthumbnail %}
+          </div>
 
-  <form action="" method="POST">
-    {% csrf_token %}
+          <div class="stats lg:stats-vertical shadow">
 
-    {% for elem in form %}
-      <p>-----{{elem.name}}------</p>
-      {{ elem.label }}
-      {{ elem }}
+            <div class="stat">
+              <div class="stat-figure text-primary">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-8 h-8 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
+              </div>
+              <div class="stat-title">Total Likes</div>
+              <div class="stat-value text-primary">25.6K</div>
+              <div class="stat-desc">21% more than last month</div>
+            </div>
 
-    {% endfor %}
-    <br>
-    <input class="mt-6 btn btn-primary" type="submit" value="Save">
-  </form>
+            <div class="stat">
+              <div class="stat-figure text-accent">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-8 h-8 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4"></path></svg>
+              </div>
+              <div class="stat-title">Albums</div>
+              <div class="stat-value text-accent">2.6M</div>
+              <div class="stat-desc">21% more than last month</div>
+            </div>
+
+
+          </div>
+
+        </div>
+      </div>
+
+
+      <div class="rounded-lg bg-base-200 p-8 shadow-lg lg:col-span-3 lg:p-12">
+        <form class="space-y-4" method="POST">
+          {% csrf_token %}
+
+          <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+            <div>
+              <label class="sr-only" for="first_name">First Name</label>
+              {{form.first_name}}
+            </div>
+            <div>
+              <label class="sr-only" for="last_name">Last Name</label>
+              {{form.last_name}}
+            </div>
+          </div>
+
+          <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+            <div>
+              <label class="sr-only" for="email">Email</label>
+              {{form.email}}
+            </div>
+
+            <div>
+              <label class="sr-only" for="birthday">Date of Birth</label>
+              <!-- <input
+                class="w-full rounded-lg input input-bordered p-3 text-sm"
+                placeholder="Date of Birth"
+                type="date"
+                id="birthday"
+              /> -->
+              {{form.date_of_birth}}
+            </div>
+          </div>
+
+          <!-- <div class="grid grid-cols-1 gap-4 text-center sm:grid-cols-3">
+            <div>
+              <input
+                class="peer sr-only"
+                id="option1"
+                type="radio"
+                tabindex="-1"
+                name="option"
+              />
+
+              <label
+                for="option1"
+                class="block w-full rounded-lg border border-base-300 p-3 hover:border-accent peer-checked:border-accent peer-checked:bg-accent peer-checked:text-white"
+                tabindex="0"
+              >
+                <span class="text-sm"> Option 1 </span>
+              </label>
+            </div>
+
+            <div>
+              <input
+                class="peer sr-only"
+                id="option2"
+                type="radio"
+                tabindex="-1"
+                name="option"
+              />
+
+              <label
+                for="option2"
+                class="block w-full rounded-lg border border-base-300 p-3 hover:border-accent peer-checked:border-accent peer-checked:bg-accent peer-checked:text-white"
+                tabindex="0"
+              >
+                <span class="text-sm"> Option 2 </span>
+              </label>
+            </div>
+
+            <div>
+              <input
+                class="peer sr-only"
+                id="option3"
+                type="radio"
+                tabindex="-1"
+                name="option"
+              />
+
+              <label
+                for="option3"
+                class="block w-full rounded-lg border border-base-300 p-3 hover:border-accent peer-checked:border-accent peer-checked:bg-accent peer-checked:text-white"
+                tabindex="0"
+              >
+                <span class="text-sm"> Option 3 </span>
+              </label>
+            </div>
+          </div> -->
+
+          <div>
+            <label class="sr-only" for="bio">Bio</label>
+            {{form.bio}}
+          </div>
+
+          <div class="mt-4">
+            <button
+              type="submit"
+              class="inline-block w-full btn btn-accent px-5 py-3 font-medium text-white sm:w-auto"
+            >
+              Save changes
+            </button>
+          </div>
+        </form>
+
+        {{form.errors}}
+      </div>
+    </div>
+  </div>
+</section>
 
 {% endblock %}
