--- a/albums/templates/albums/albums.html
+++ b/albums/templates/albums/albums.html
@@ -20,13 +20,13 @@
     </div>
 
     <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
-
+      <!-- MY ALBUMS -->
       {% for album, default_photo in albums_with_default_photos.items %}
         <a href="{% url 'albums:album_detail' album.pk %}" class="group">
           <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
             {% if default_photo %}
               <!-- <img src="{{ default_photo.image.url }}" alt="{{ album.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75"> -->
-              {% thumbnail default_photo.image "300x300" crop="center" as im %}
+              {% thumbnail default_photo.image "600x600" crop="center" as im %}
                 <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ im.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
               {% endthumbnail %}
             {% else %}
@@ -40,7 +40,7 @@
             <p class="mt-1 text-lg font-medium">{{ album.title }}</p>
             {% if number_of_access|list_item:forloop.counter0 %}
               <div class="tooltip tooltip-bottom" data-tip="shared with {{number_of_access|list_item:forloop.counter0}} users">
-                <div class="mt-1 badge badge-outline badge-accent">
+                <div class="mt-2 badge badge-outline badge-accent">
                   <svg class="w-4 h-4 fill-current mr-1" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M13.803 5.33333C13.803 3.49238 15.3022 2 17.1515 2C19.0008 2 20.5 3.49238 20.5 5.33333C20.5 7.17428 19.0008 8.66667 17.1515 8.66667C16.2177 8.66667 15.3738 8.28596 14.7671 7.67347L10.1317 10.8295C10.1745 11.0425 10.197 11.2625 10.197 11.4872C10.197 11.9322 10.109 12.3576 9.94959 12.7464L15.0323 16.0858C15.6092 15.6161 16.3473 15.3333 17.1515 15.3333C19.0008 15.3333 20.5 16.8257 20.5 18.6667C20.5 20.5076 19.0008 22 17.1515 22C15.3022 22 13.803 20.5076 13.803 18.6667C13.803 18.1845 13.9062 17.7255 14.0917 17.3111L9.05007 13.9987C8.46196 14.5098 7.6916 14.8205 6.84848 14.8205C4.99917 14.8205 3.5 13.3281 3.5 11.4872C3.5 9.64623 4.99917 8.15385 6.84848 8.15385C7.9119 8.15385 8.85853 8.64725 9.47145 9.41518L13.9639 6.35642C13.8594 6.03359 13.803 5.6896 13.803 5.33333Z"></path></svg>
                   {{number_of_access|list_item:forloop.counter0}}
                 </div>
@@ -49,8 +49,8 @@
           </div>
         </a>
       {% endfor %}
-      <a href="{% url 'albums:album_create' %}" class="tooltip tooltip-top tooltip-primary group" data-tip="create new album">
-        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
+      <a href="{% url 'albums:album_create' %}" class="tooltip tooltip-bottom tooltip-neutral group" data-tip="create new album">
+        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-300 xl:aspect-h-8 xl:aspect-w-7">
           <div class="grid place-content-center h-full w-full object-cover object-center group-hover:opacity-75">
             <p class="text-8xl font-base text-slate-600"> + </p>
           </div>
@@ -58,6 +58,7 @@
       </a>
     </div>
   </div>
+  <!-- ALBUMS SHARED WITH ME -->
   {% if shared_albums_with_default_photos %}
   <div class="mx-auto max-w-2xl px-4 pb-16 sm:px-6 sm:pb-24 lg:max-w-7xl lg:px-8">
     <div class="py-2 flex gap-6 items-center">
@@ -77,7 +78,7 @@
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
           {% if default_photo %}
             <!-- <img src="{{ default_photo.image.url }}" alt="{{ album.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75"> -->
-            {% thumbnail default_photo.image "300x300" crop="center" as im %}
+            {% thumbnail default_photo.image "600x600" crop="center" as im %}
               <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ im.title }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
             {% endthumbnail %}
           {% else %}
